[package]
name = "minecraft"
version = "0.1.0"
authors = ["Chris Ohk <utilforever@gmail.com>"]
description = "A reimplementation of Minecraft written in Rust"
repository = "https://github.com/utilforever/minecraft-rs"
readme = "README.md"
keywords = [ "minecraft", "game", "voxel", "sandbox" ]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.52.0"
rand = "0.8.5"
image = "0.24.7"
itertools = "0.11.0"
specs = "0.20.0"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
num-traits = "0.2.17"
