[package]
name = "minecraft"
version = "0.1.0"
authors = ["Chris Ohk <utilforever@gmail.com>"]
description = "A reimplementation of Minecraft written in Rust"
repository = "https://github.com/utilforever/minecraft-rs"
readme = "README.md"
keywords = [ "minecraft", "game", "voxel", "sandbox" ]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.52.0"
rand = "0.8.5"
image = "0.24.7"
itertools = "0.12.1"
specs = "0.20.0"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
num-traits = "0.2.18"
noise = "0.8.2"
lazy_static = "1.4.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
